Add deployment configuration and mobile optimizations - Ready for Netlify + Render deployment